--- a/style.css
+++ b/style.css
@@ -37,3 +37,22 @@ body {
     padding-left: 15px;
     padding-bottom: 17px;
 }
+
+#insta-box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 10px;
+    padding-bottom: 5px;
+    margin: 10px;
+    border: solid #5539cc 3px;
+}
+
+#discord-box p {
+    color: #ff7b45;
+    font-size: 50px;
+    padding-left: 15px;
+    padding-bottom: 17px;
+}
