--- a/style.css
+++ b/style.css
@@ -5,54 +5,35 @@
 
 body {
     background-color: #000000;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 .img-container {
     width: 50px;
-    height: 50px;
+    height: auto;
     overflow: hidden;
 }
 
 .img-container img {
     width: 100%;
-    width: 100%;
+    height: 100%;
     object-fit: cover;
 }
 
-#discord-box {
+.link-container {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-left: 20px;
-    padding-right: 20px;
+    align-content: center;
+    padding-right: 100px;
     padding-top: 10px;
     padding-bottom: 5px;
     margin: 10px;
-    border: solid #5539cc 3px;
+    border: solid 3px;
 }
 
-#discord-box p {
-    color: #5539cc;
+.link-container a {
     font-size: 50px;
     padding-left: 15px;
-    padding-bottom: 17px;
-}
-
-#insta-box {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-top: 10px;
     padding-bottom: 5px;
-    margin: 10px;
-    border: solid #5539cc 3px;
-}
-
-#discord-box p {
-    color: #ff7b45;
-    font-size: 50px;
-    padding-left: 15px;
-    padding-bottom: 17px;
 }
